# i18n-fastapi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: PUBLISHING.md  USAGE.md
python/i18n_fastapi/: __init__.py  _engine.py  _python_engine.py  _watcher.py  config.py  context.py  dependencies.py  middleware.py  plugin.py  router.py
rust/: Cargo.toml
rust/src/: engine.rs  interpolation.rs  lib.rs  loader.rs  pluralization.rs
tests/: conftest.py  test_auto_discover.py  test_config.py  test_engine.py  test_engine_selector.py  test_integration.py  test_middleware.py  test_plugin.py  test_resolvers.py  test_watcher.py
tests/fixtures/locales/en/: messages.json
tests/fixtures/locales/es/: messages.json
