[project]
name = "i18n-fastapi"
version = "0.1.1"
description = "High-performance i18n for FastAPI with Rust-powered translation engine"
authors = [{ name = "Johnatan Palacios Londoño", email = "johnatan.palacios@utp.edu.co" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["fastapi", "i18n", "internationalization", "rust", "translations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Internationalization",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.100.0",
    "orjson>=3.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
reload = ["watchfiles>=0.20.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "maturin>=1.5,<2.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "rust/Cargo.toml"
module-name = "i18n_fastapi._native"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "ANN"]
ignore = ["ANN401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
